feat: synchronize Shopify locales and markets
